# comtacts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  python-tests.yml
src/comtacts/: __init__.py  cli.py  comtacts.py
tests/: conftest.py  test_cli.py  test_core.py
